# oop-project

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  buildAndRun.sh  main.cpp  tastatura.txt
.github/actions/clang-tidy/: action.yml
.github/actions/create-release/: action.yml
.github/actions/install-packages/: action.yml
.github/workflows/: cmake.yml
cmake/: CompilerFlags.cmake
include/: Constants.h  CurlSession.h  Exceptions.hpp  HTTPHeaders.h  HTTPRequest.h  HTTPResponse.h  Pipeline.h  ResponseDiffEngine.h  StrategyRegistry.h  StrategyResult.h  TemplatedRequest.h  Utilities.h
include/strategies/: DummyStrategy.h  OperatorInjectionStrategy.h  SsjsBooleanBlindStrategy.h  SsjsTimeBlindStrategy.h  Strategy.h
scripts/: run_cppcheck.sh
src/: Constants.cpp  CurlSession.cpp  HTTPHeaders.cpp  HTTPRequest.cpp  HTTPResponse.cpp  ResponseDiffEngine.cpp  StrategyRegistry.cpp  TemplatedRequest.cpp  Utilities.cpp
src/strategies/: DummyStrategy.cpp  OperatorInjectionStrategy.cpp  SsjsBooleanBlindStrategy.cpp  SsjsTimeBlindStrategy.cpp  Strategy.cpp
test/: Dockerfile  control-api.ts  docker-compose.yml  orchestrator.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
test/db/: connection.ts
test/protos/: orchestrator.proto
test/scenarios/: BaseScenario.ts  WhereClauseScenario.ts  index.ts
test/utils/: server-helper.ts
